feat(index.html): removed css classes

--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
     <title>Streaming Argentino</title>
   </head>
   <body>
-    <h1 class="poppins-semibold">Descubrí el streaming argentino</h1>
-    <h2 class="poppins-regular">
+    <h1>Descubrí el streaming argentino</h1>
+    <h2>
       In aenean posuere lorem risus nec. Tempor tincidunt aenean purus purus
       vestibulum nibh mi
     </h2>
     <div class="buttons">
-      <a href="https://www.youtube.com/luzutv" class="button"
+      <a href="https://www.youtube.com/luzutv"
         ><img src="img/Luzu.png" alt="Luzu"
       /></a>
-      <a href="https://www.youtube.com/@olgaenvivo_" class="button"
+      <a href="https://www.youtube.com/@olgaenvivo_"
         ><img src="img/Olga.png" alt="Olga"
       /></a>
-      <a href="https://www.youtube.com/@SomosGelatina" class="button"
+      <a href="https://www.youtube.com/@SomosGelatina"
         ><img src="img/Gelatina.png" alt="Gelatina"
       /></a>
-      <a href="https://www.vorterix.com/" class="button"
+      <a href="https://www.vorterix.com/"
         ><img src="img/Vorterix.png" alt="Vorterix"
       /></a>
-      <a href="https://www.youtube.com/@estoesblender" class="button"
+      <a href="https://www.youtube.com/@estoesblender"
         ><img src="img/Blender.png" alt="Blender"
       /></a>
     </div>
@@ -35,7 +35,7 @@
         <img src="icon/Facebook.png" />
         <img src="icon/Twitter.png" />
       </div>
-      <span class="poppins-bold signatures">by shulian y sofi</span>
+      <span class="signatures">by shulian y sofi</span>
     </footer>
   </body>
 </html>
